2006-08-22  Mark Kettenis  <kettenis@gnu.org>

	* gdbtypes.c (init_flags_type): Set all fields to zero instead of
	just the first one.

2006-08-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (INTERNAL_CPPFLAGS): New.
	(INTERNAL_CFLAGS_BASE): Use it.

2006-08-22  Michael Snyder  <Michael.Snyder@PalmSource.com>

	* MAINTAINERS: Update my email address.

2006-08-19  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (amd64_linux_tdep_h): New.
	(amd64-linux-nat.o, amd64-linux-tdep.o): Update.
	* amd64-linux-nat.c (amd64_linux_gregset64_reg_offset): Add
	ORIG_RAX.
	(_initialize_amd64_linux_nat): Set amd64_native_gregset64_num_regs.
	* amd64-linux-tdep.c (amd64_linux_register_name)
	(amd64_linux_register_type, amd64_linux_register_reggroup_p)
	(amd64_linux_write_pc): New.
	(amd64_linux_init_abi): Use them, and update num_regs.
	* amd64-linux-tdep.h: New file.
	* amd64-tdep.c (amd64_register_name, amd64_register_type): Make
	public.
	* amd64-tdep.h (amd64_register_name, amd64_register_type): New
	prototypes.

	* regformats/reg-x86-64-linux.dat: New file.

2006-08-18  Daniel Jacobowitz  <dan@codesourcery.com>

	* infrun.c (handle_inferior_event): Check the current frame ID
	before unwinding to the previous frame.

2006-08-18  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2read.c (quirk_gcc_member_function_pointer): Add GCC PR
	number in a comment.

2006-08-18  Mark Kettenis  <kettenis@gnu.org>

	* sparc-nat.c (sparc_xfer_wcookie): Signal EOF.  Tweak comment.

2006-08-18  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2read.c (quirk_gcc_member_function_pointer): New.
	(read_structure_type): Call it.

2006-08-16  Daniel Jacobowitz  <dan@codesourcery.com>

	* NEWS: Mention "set trust-readonly-sections" fix.

2006-08-16  Daniel Jacobowitz  <dan@codesourcery.com>

	* remote.c, target.c: Strip trailing whitespace.

2006-08-15  Daniel Jacobowitz  <dan@codesourcery.com>

	PR remote/1966
	* dcache.c (dcache_write_line): Use target_write.